<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button android:id="@+id/insertButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/insertButton" />

    <EditText
        android:id="@+id/IDField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deleteHint"
        android:inputType="text"
        android:imeOptions="actionSend" />

    <Button android:id="@+id/deleteButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton" />

    <EditText
        android:id="@+id/newValueField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/updateHint"
        android:inputType="text"
        android:imeOptions="actionSend" />

    <Button android:id="@+id/updateButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateButton" />

    <Button android:id="@+id/queryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/queryButton" />

</LinearLayout>